--- a/decompiled/商品条码检验报告.csproj
+++ b/decompiled/商品条码检验报告.csproj
@@ -1,10 +1,10 @@
-<?xml version='1.0' encoding='utf-8'?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" DefaultTargets="Build">
   <PropertyGroup>
     <ProjectType>local</ProjectType>
     <ProjectVersion>7.10.377</ProjectVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>e9c90207-39bd-4331-9d00-ed65eec40be5</ProjectGuid>
+    <ProjectGuid>{A5AB3D44-BACA-4709-B904-F8E18CF9833A}</ProjectGuid>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <AssemblyName>商品条码检验报告</AssemblyName>
     <OutputType>WinExe</OutputType>
@@ -40,14 +40,20 @@
     <Reference Include="GoldPrinter" />
     <Compile Include="AssemblyInfo.cs" />
     <Compile Include="Global.cs" />
-    <Compile Include="商品条码检验报告\frmPrint.cs" />
+    <Compile Include="商品条码检验报告\frmPrint.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="DatabaseConn.cs" />
     <Compile Include="商品条码检验报告\SqlHelper.cs" />
     <Compile Include="商品条码检验报告\DataReadHelper.cs" />
-    <Compile Include="商品条码检验报告\frmHis.cs" />
+    <Compile Include="商品条码检验报告\frmHis.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="商品条码检验报告\Properties\Settings.cs" />
     <Compile Include="商品条码检验报告\Program.cs" />
-    <Compile Include="商品条码检验报告\frmMain.cs" />
+    <Compile Include="商品条码检验报告\frmMain.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="商品条码检验报告\Quatity.cs" />
     <Compile Include="商品条码检验报告\BarcodeSample.cs" />
     <Compile Include="商品条码检验报告\Properties\Resources.cs" />
@@ -58,5 +64,15 @@
     <EmbeddedResource Include="商品条码检验报告.Properties.Resources.resources" />
     <EmbeddedResource Include="商品条码检验报告.frmMain.resources" />
     <EmbeddedResource Include="商品条码检验报告.frmHis.resources" />
+    <Reference Include="System.XML" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="libs\GoldPrinter.dll" />
+    <Content Include="libs\Interop.Excel.dll" />
+    <Content Include="libs\Interop.Microsoft.Office.Core.dll" />
+    <Content Include="libs\Interop.Office.dll" />
+    <Content Include="libs\Interop.VBIDE.dll" />
+    <Content Include="libs\Microsoft.Office.Interop.Excel.dll" />
+    <Content Include="libs\office.dll" />
   </ItemGroup>
 </Project>
